@@ -1,3 +1,8 @@
+Sun Sep  9 02:30:20 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* thread.c (rb_mutex_lock): stop multiple threads use
+	  pthread_cond_timedwait() concurrently. [Bug #6278] [ruby-core:44275]
+
 Thu Aug 30 09:24:43 2012  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/uri/ftp.rb (URI::FTP#initialize): raise InvalidURIError if "//"
